// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package furo.cube;

option java_outer_classname = "Wrappers";
option java_multiple_files = true;
option java_package = "pro.furo.cube";
option go_package = "furo/cube;cubepb";
import "google/protobuf/wrappers.proto";

message Wrappers {
  google.protobuf.StringValue string_value = 1;
  google.protobuf.Int32Value int32_value = 2;
  google.protobuf.Int64Value int64_value = 3;
  google.protobuf.FloatValue float_value = 4;
  google.protobuf.DoubleValue double_value = 5;
  google.protobuf.BoolValue bool_value = 6;
  google.protobuf.UInt32Value uint32_value = 7;
  google.protobuf.UInt64Value uint64_value = 8;
  google.protobuf.BytesValue bytes_value = 9;
}
