// Code generated by furo-proto-gen. DO NOT EDIT.
syntax = "proto3";
package furo.type;

option go_package = "furo/type;typepb";
option java_multiple_files = true;
option java_outer_classname = "Numeric64";
option java_package = "pro.furo.open-models.furo.type";

import "openapiv3/annotations.proto";

// Decimal numbers
//  Regex pattern: ^[&#43;-]?(\d*\.)?\d&#43;$
message Uints {

  uint64 uint64 = 1 [(openapi.v3.property) = {minimum:5, maximum:1000, multiple_of:5, exclusive_minimum: false, exclusive_maximum: false}];
  uint32 uint32 = 2 [(openapi.v3.property) = {minimum:5, maximum:1000, multiple_of:5, exclusive_minimum: false, exclusive_maximum: false}];

  uint64 uint64Excl = 3 [(openapi.v3.property) = {minimum:5, maximum:1000, multiple_of:5, exclusive_minimum: true, exclusive_maximum: true}];
  uint32 uint32Excl = 4 [(openapi.v3.property) = {minimum:5, maximum:1000, multiple_of:5, exclusive_minimum: true, exclusive_maximum: true}];

}
