/**
 * Standard Set of Type Renderers
 * For every supported type a simple rendering component for value display purposes is provided.
 *
 */

import './display-string.js';
import './display-int32.js';
import './display-uint32.js';
import './display-int64.js';
import './display-uint64.js';
import './display-double.js';
import './display-float.js';
import './display-bool.js';
import './display-furo-fat-bool.js';
import './display-furo-fat-double.js';
import './display-furo-fat-float.js';
import './display-furo-fat-int32.js';
import './display-furo-fat-int64.js';
import './display-furo-fat-uint32.js';
import './display-furo-fat-uint64.js';
import './display-furo-fat-string.js';
import './display-furo-link.js';
import './display-furo-type-money.js';
import './display-furo-type-date.js';
import './display-furo-reference.js';
import './display-furo-property.js';
import './display-furo-property-repeated.js';
import './display-furo-property-repeats-labeled.js';
import './display-furo-numberproperty.js';
import './display-furo-integerproperty.js';
import './display-furo-stringoptionproperty.js';
import './display-furo-stringproperty.js';
import './display-google-type-date.js';
import './display-google-type-money.js';
import './display-google-type-timeofday.js';
import './display-google-type-color.js';
import './display-google-protobuf-boolvalue.js';
import './display-google-protobuf-doublevalue.js';
import './display-google-protobuf-floatvalue.js';
import './display-google-protobuf-int32value.js';
import './display-google-protobuf-int64value.js';
import './display-google-protobuf-stringvalue.js';
import './display-google-protobuf-timestamp.js';
import './display-google-protobuf-any.js';

import './cell-string.js';
import './cell-int32.js';
import './cell-uint32.js';
import './cell-int64.js';
import './cell-uint64.js';
import './cell-double.js';
import './cell-float.js';
import './cell-bool.js';
import './cell-furo-fat-bool.js';
import './cell-furo-fat-double.js';
import './cell-furo-fat-float.js';
import './cell-furo-fat-int32.js';
import './cell-furo-fat-int64.js';
import './cell-furo-fat-uint32.js';
import './cell-furo-fat-uint64.js';
import './cell-furo-fat-string.js';
import './cell-furo-link.js';
import './cell-furo-type-money.js';
import './cell-furo-type-date.js';
import './cell-furo-reference.js';
import './cell-furo-property.js';
import './cell-furo-property-repeated.js';
import './cell-furo-numberproperty.js';
import './cell-furo-integerproperty.js';
import './cell-furo-stringoptionproperty.js';
import './cell-furo-stringproperty.js';
import './cell-google-type-date.js';
import './cell-google-type-money.js';
import './cell-google-type-timeofday.js';
import './cell-google-type-color.js';
import './cell-google-protobuf-boolvalue.js';
import './cell-google-protobuf-doublevalue.js';
import './cell-google-protobuf-floatvalue.js';
import './cell-google-protobuf-int32value.js';
import './cell-google-protobuf-int64value.js';
import './cell-google-protobuf-stringvalue.js';
import './cell-google-protobuf-timestamp.js';
import './cell-google-protobuf-any.js';


import './celledit-string.js';

import './celledit-furo-fat-string.js';
import './celledit-google-protobuf-stringvalue.js';


import './celledit-int32.js';
import './celledit-int64.js';
import './celledit-uint32.js';
import './celledit-uint64.js';
import './celledit-bool.js';
import './celledit-furo-fat-bool.js';
import './celledit-google-protobuf-boolvalue.js';
import './celledit-google-protobuf-doublevalue.js';
import './celledit-google-protobuf-floatvalue.js';
import './celledit-google-protobuf-int32value.js';
import './celledit-google-protobuf-int64value.js';
import './celledit-google-protobuf-uint32value.js';
import './celledit-google-protobuf-uint64value.js';
import './celledit-furo-fat-double.js';
import './celledit-furo-fat-float.js';
import './celledit-furo-fat-int32.js';
import './celledit-furo-fat-int64.js';
import './celledit-furo-fat-uint32.js';
import './celledit-furo-fat-uint64.js';
import './celledit-furo-property.js';
import './celledit-furo-property-repeated.js';

